src/test/ui/consts/const-deref-ptr.stderr
error[E0658]: dereferencing raw pointers in statics is unstable (see issue #51911)
  --> $DIR/const-deref-ptr.rs:4:29
   |
LL |     static C: u64 = unsafe {*(0xdeadbeef as *const u64)};
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(const_raw_ptr_deref)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
